--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -471,6 +471,19 @@
     "# Plot the decision boundary\n",
     "plot_decision_boundary(X, theta)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Input** (X, x-1): 'X' is passed in the perceptron function as 'x-1'. There are three inputs: Bias term, sepal length and petal length.\n",
+    "\n",
+    "**Weights** (theta): is initialized as a column vector of zeros in the perceptron function and is updated during training. There are three weights: Bias weight, weight for sepal length and weight for petal length.\n",
+    "\n",
+    "**Net/weighted sum** (np.dot(x_i.T, theta)): is the dot product of the input vector 'X' and weight vector 'theta' then adding the bias term.\n",
+    "\n",
+    "**Transfer/activation function** (step_func(z)): it takes the net sum z as input and returns 1 if z is greater than 0, otherwise, it returns 0. This function determines whether the perceptron activates (outputs 1) or not (outputs 0) based on the net sum."
+   ]
   }
  ],
  "metadata": {
