--- a/adaline.ipynb
+++ b/adaline.ipynb
@@ -622,6 +622,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "957843c4",
+   "metadata": {},
+   "source": [
+    "**Input** (X): The input data is scaled, usually by standardization or normalization. \n",
+    "\n",
+    "**Weights** (theta): `theta[1:]` represents the weights associated with the input features, while `theta[0]` represents the bias weight.\n",
+    "\n",
+    "**Net input function** (net_input): `np.dot(X, theta[1:])` calculates the weighted sum of the input features, and `theta[0]` is the bias weight.\n",
+    "\n",
+    "**Activation function** (linear function): The activation function is linear, which means the output neuron is directly determined by the net input.\n",
+    "\n",
+    "**Threshold function / comparator / quantizer**: This sample code doesn't involve a threshold or quantization step to produce discrete outputs. It produces continuous output values that are proportional to the net input. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac29010f-0b3e-47ec-9d34-b9039d9ee69a",
    "metadata": {},
    "source": [
@@ -631,15 +647,14 @@
     "\n",
     "2. Plot the mean squared deviation vs. epoch. Does the algorithm converge fast? How many epochs was executed?\n",
     "\n",
-    "3. Classify the data set into two groups: Setosa and Versicolor, where now the output is the predicted output in the Adaline algorithm. \n",
-    "Note: Use the threshold function (unit step function) so that the output will have only two possible values.\n",
+    "3. Classify the data set into two groups: Setosa and Versicolor, where now the output is the predicted output in the Adaline algorithm. Note: Use the threshold function (unit step function) so that the output will have only two possible values.\n",
     "\n",
     "4. Plot the clustered data set using a 2D-colormap graph where the color indicates the predicted output and the x- and y-axes are the features. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "23ad9b33-5565-4ecb-9b5b-8a33916cabcf",
    "metadata": {
     "tags": []
@@ -733,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "d03b9d75-e59e-4f9f-b109-3932347711d9",
    "metadata": {
     "tags": []
