--- a/adaline.ipynb
+++ b/adaline.ipynb
@@ -785,12 +785,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1f081e4-44df-4ac1-8655-27571af2d4b1",
+   "cell_type": "markdown",
+   "id": "80e54a95",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Key components:\n",
+    "**Input data** `(Xp)`: Represent the input data.\n",
+    "\n",
+    "**Weights** `(theta)`: Represents the weight.\n",
+    "\n",
+    "**Net/weighted sum** `(net_input)`: Calculated in the `adaline` function.\n",
+    "\n",
+    "**Activation function** `(net_input)`: The `net input` is used as the output. This is a linear activation function, a.k.a. identity function.\n",
+    "\n",
+    "**Threshold/comparator** `(threshold)`: The function assigns class labels of 1 or -1 based on whether the net input is greater than or equal to 0.\n",
+    "\n",
+    "**Learning algorithm (Widrow-Hoff rule)**: Implemented in the `adaline` function. The weights `theta[1:]` are updated using the line: `theta[1:] += lr * X.T.dot(errors)` and the bias `theta[0]` is updated with `theta[0] += lr * errors.sum()`. In short, the weights are adjusted to iteratively minimize the error.\n",
+    "\n",
+    "Additional:\n",
+    "**Training loop**: The training loop inside the `adaline` function runs for a specified number of epochs, and during each epoch, it calculates the error, updates the weights and checks for convergence based on the defined tolerance.\n",
+    "\n",
+    "**Prediction function**: The `predict` function takes the trained weights and input data to make predictions. It computes the net input and uses the threshold function to assign class labels."
+   ]
   }
  ],
  "metadata": {
